syntax = "proto3";

package proto;

option go_package="proto/";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegistrationRequest {
  string email = 1;
  string password = 2;
  string password_repeat = 3;
  bool eula = 4;
}

message RefreshRequest {
  string refresh_token = 1;
}

message ChangePasswordRequest {
  string old_password = 1;
  string new_password = 2;
  string new_password_repeat = 3;
}

message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

service Auth {
  rpc Login(LoginRequest) returns (TokenResponse);
  rpc Registration(RegistrationRequest) returns (TokenResponse);
  rpc Refresh(RefreshRequest) returns (TokenResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (TokenResponse);
}